# maki

./: .clang-tidy  CMakeLists.txt  Doxyfile  Doxyfile-mcss  README.md  appveyor.yml
examples/: CMakeLists.txt
examples/actions/: CMakeLists.txt  expected-output.txt
examples/actions/src/: main.cpp
examples/breaking_circular_dependency/: CMakeLists.txt
examples/breaking_circular_dependency/src/: context.hpp  events.hpp  fsm.hpp  fsm_fwd.hpp  main.cpp
examples/breaking_circular_dependency/src/states/: idle.hpp  initializing.cpp  initializing.hpp  running.hpp
examples/doc-concepts-context-state/src/: main.cpp
examples/doc-concepts-run-to-completion/: expected-output.txt
examples/doc-concepts-run-to-completion-nok/: CMakeLists.txt  expected-output.txt
examples/doc-extra-filter-transition-table/: CMakeLists.txt
examples/doc/concepts/action/: CMakeLists.txt
examples/doc/concepts/event/: CMakeLists.txt
examples/doc/concepts/event-deferral/: CMakeLists.txt  expected-output.txt
examples/doc/concepts/guard/: CMakeLists.txt  expected-output.txt
examples/doc/concepts/region/: CMakeLists.txt
examples/doc/concepts/state/: CMakeLists.txt
examples/doc/concepts/state-machine/: CMakeLists.txt  expected-output.txt
examples/doc/concepts/transition/: CMakeLists.txt
examples/doc/extra/exception-safety/: CMakeLists.txt
examples/doc/extra/guard-composition/: CMakeLists.txt
examples/doc/extra/state-set/: CMakeLists.txt  expected-output.txt
examples/doc/misc/external-transition-hook/: CMakeLists.txt  expected-output.txt
examples/doc/misc/state-transition-hook/: CMakeLists.txt  expected-output.txt
examples/events/: CMakeLists.txt
examples/events/src/: main.cpp  motor.hpp  user_interface.hpp
examples/fan/: CMakeLists.txt
examples/fan/src/: main.cpp
examples/lamp/: CMakeLists.txt
examples/lamp/src/: main.cpp
examples/rgb-lamp/: CMakeLists.txt  expected-output.txt
examples/rgb-lamp/src/: main.cpp
examples/rgb_lamp/: CMakeLists.txt
examples/rgb_lamp/src/: main.cpp
fgfsm/: CMakeLists.txt
fgfsm/include/: fgfsm.hpp
fgfsm/include/fgfsm/: action_fn.hpp  any.hpp  any_copy.hpp  any_cref.hpp  default_fsm_configuration.hpp  event.hpp  event_ref.hpp  fn.hpp  fsm.hpp  fsm_class.hpp  fsm_configuration.hpp  fsm_fwd.hpp  fsm_ref.hpp  guard_fn.hpp  guard_operators.hpp  internal_transition_policy.hpp  internal_transition_policy_helper.hpp  none.hpp  on_event_invocation_policy.hpp  row.hpp  simple_state.hpp  state_transition_helper.hpp  state_transition_policy.hpp  state_transition_policy_helper.hpp  state_transition_table.hpp  transition_policy.hpp  transition_table.hpp  type_pattern.hpp  unused.hpp  version.hpp
fgfsm/include/fgfsm/detail/: alternative.hpp  alternative_lazy.hpp  any_container.hpp  call_member.hpp  call_state_member.hpp  final_act.hpp  first_arg.hpp  for_each.hpp  fsm_object_holder.hpp  fsm_object_holder_tuple.hpp  function_traits.hpp  ignore_unused.hpp  make_tuple.hpp  (+6 more)
scripts/update/templates/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: main.cpp
test/src/test_cases/: action.cpp  action_fn.cpp  anonymous_transition.cpp  any_cref.cpp  any_state.cpp  basic_exception.cpp  basic_transition.cpp  before_entry.cpp  common.hpp  composite_state.cpp  composite_state_entry_exit.cpp  composite_state_in_type_pattern.cpp  composite_state_on_xxx.cpp  double_start_stop.cpp  double_stop.cpp  fsm_ref.cpp  guard.cpp  guard_fn.cpp  guard_operators.cpp  initial_composite_state.cpp  internal_transition.cpp  internal_transition_in_transition_table.cpp  is_active_state_pattern.cpp  no_in_state_internal_transitions.cpp  non_copyable_context.cpp  nullary_member_functions.cpp  nullary_on_entry_exit.cpp  on_entry_event_exit.cpp  on_event.cpp  on_exception.cpp  orthogonal_regions.cpp  pretty_name.cpp  recursive_process_event.cpp  region_path.cpp  sm_ref.cpp  small_event_requirements.cpp  start_stop.cpp  state_inheritance.cpp  state_transition_hook_set.cpp  subsm.cpp  (+4 more)
tests/: CMakeLists.txt
tests/example-checker/: CMakeLists.txt
tests/example-checker/src/: main.cpp
tests/src/: action.cpp  anonymous_transition.cpp  any_state.cpp  basic_exception.cpp  basic_transition.cpp  before_entry.cpp  common.hpp  conf_subtype_chaining.cpp  context_construction.cpp  double_start_stop.cpp  event_filter.cpp  event_pattern.cpp  get_state.cpp  guard.cpp  guard_operators.cpp  initial_composite_state.cpp  internal_transition.cpp  internal_transition_in_transition_table.cpp  is_active_state_filter.cpp  is_active_state_pattern.cpp  non_copyable_context.cpp  nullary_member_functions.cpp  on_entry_event_exit.cpp  on_event.cpp  on_event_auto.cpp  on_exception.cpp  on_unprocessed.cpp  orthogonal_regions.cpp  pretty_name.cpp  recursive_process_event.cpp  region_path.cpp  sm_ref.cpp  small_event_requirements.cpp  start_stop.cpp  state_inheritance.cpp  state_transition_hook_set.cpp  subsm.cpp  subsm_context.cpp  subsm_in_type_filter.cpp  subsm_on_xxx.cpp
tests/src/common/: empty_state.hpp
tests/src/detail/: function_queue.cpp  transition_table_digest.cpp
tests/tests/: CMakeLists.txt
tests/tests/src/: action.cpp  anonymous_transition.cpp  any_state.cpp  basic_exception.cpp  basic_transition.cpp  before_entry.cpp  catch_pseudostate_internal_transition.cpp  catch_pseudostate_orthogonal_regions.cpp  catch_pseudostate_simple.cpp  check_event.cpp  common.hpp  completion_transition.cpp  composite_state.cpp  composite_state_completion.cpp  composite_state_context.cpp  composite_state_in_state_set.cpp  composite_state_in_type_filter.cpp  composite_state_on_xxx.cpp  composite_state_with_activation_lifetime.cpp  conf_subtype_chaining.cpp  context_construction.cpp  context_lifetime_deep.cpp  context_lifetime_deep_ana.cpp  context_lifetime_deep_apa.cpp  context_lifetime_deep_app.cpp  defer_basic.cpp  defer_chain.cpp  defer_rtc.cpp  double_start_stop.cpp  empty_state.cpp  event_filter.cpp  event_pattern.cpp  event_set.cpp  exception_from_constructor.cpp  fast_unsafe_run_to_completion.cpp  get_state.cpp  guard.cpp  guard_operators.cpp  initial_action.cpp  initial_composite_state.cpp  (+45 more)
(+565 files in other folders)
